[gd_scene load_steps=3 format=2]

[ext_resource path="res://InputEventsTests/InputTest.gd" type="Script" id=1]
[ext_resource path="res://InputEventsTests/Node.gd" type="Script" id=2]

[node name="InputTest" type="Node2D"]
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 268.0
margin_top = 216.0
margin_right = 370.0
margin_bottom = 300.0

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="gui_input" from="Button" to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
